--- a/src/components/Servicess/style.module.css
+++ b/src/components/Servicess/style.module.css
@@ -8,12 +8,50 @@
 
 .wrapper {
     width: 1080px;
-    height: 100vh;
-    background-color: grey;
+    height: 150vh;
+    background-color: rgb(234, 21, 21);
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
 }
+
+.titleHead {
+    width: 100%;
+    background: rgba(53, 224, 173, 0.736);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 150px;
+    gap: 1rem;
+}
+
+.titleTextH6 {
+    color: white;
+    font-family: Nunito;
+    font-size: 0.8rem;
+    color: var(--brown);
+}
+
+.titleTexth1 {
+    color: white;
+    font-family: Nunito;
+    font-size: 2.2rem;
+    color: var(--brown);
+}
+
+.spanText {
+    color: var(--violet);
+    font-family: Nunito;
+    font-size: 2.2rem;
+}
+
+.serviceCon {
+    width: 100%;
+    background: blue;
+}
+
+
 
 
 
