--- a/styles/global.css
+++ b/styles/global.css
@@ -14,7 +14,10 @@
   margin: 0;
   box-sizing: border-box;
   font-family: 'Nunino', 'Roboto', sans-serif;
+  overflow-x: hidden;
 }
+
+
 
 .bx {
   font-size: 2rem;
